更新友链和增加一个新的分类Android-Activity

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,9 +2,10 @@
     <div class="col-md-12">
        <h2>About me </h2>
         <br/>
-        <p>2009年，因为数学建模接触编程。</p>
-        <p>2010年，初经过培训走入程序员行业。</p>
-        <p>2010年-2013年，在西安工作过三年，主要集中在通讯领域。</p>
+        <p>2013年，考入山西农业大学信息与计算科学专业，开始接触编程。</p>
+        <p>2014年，因为数学建模更加喜欢编程。</p>
+        <p>2017年，大学毕业，开始北漂。</p>
+        <p>2017年-2019年，在北京工作过两年，主要集中在计量领域。</p>
         <p>2013年，清明节开始北漂，北京六年主要在第三方支付和互联网金融公司从业。</p>
         <p>2014年，从零参与组建一个互联网金融公司，2015年成为互联网金融公司技术负责人。</p>
         <p>2016年，开始写博客；2017年，开通微信公众号；2018年，第三方支付公司研发副总。</p>
@@ -61,7 +62,7 @@
         <p><strong>Personal</strong></p>
         <ul>
             <li>Email：<a href="mailto:{{ site.email }}" target="_top">{{ site.email }}</a></li>
-            <li>我的微信：<strong>puresmile2</strong>（备注：博客）</li>
+            <li>我的微信：<strong>LTZ94721990</strong>（备注：博客）</li>
         </ul>
 
         <p><strong>Group</strong></p>
@@ -108,7 +109,7 @@
        </h2>
 
        <ul>
-            <li>2016年，建站，托管于 Github Pages。</li>
+            <li>2019年，建站，托管于 Github Pages。</li>
             <li>2017年，博客访问量突破百万。</li>
             <li>2018年，博客迁移到腾讯云服务器。</li>
         </ul>
