--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,40 +1,13 @@
 
 <footer class="container">
     <div class="site-footer">
-       <!--  <div class="site-footer-icons">
-            <a target="_blank" href="https://www.zhihu.com/people/ityouknow">
-               知乎
-            </a>
-            <a target="_blank" href="http://weibo.com/ityouknow">
-               微博
-            </a>
-            <a target="_blank" href="https://github.com/ityouknow">
-                GitHub
-            </a>
-        </div> -->
           <div class="card text-center">
             <ul class="list-inline" style="margin-left: 0;">
                <li>
-                <a target="_blank" href="https://github.com/ityouknow">
+                <a target="_blank" href="https://github.com/nangongyibin7219">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li>
-                <a target="_blank" href="https://www.zhihu.com/people/ityouknow">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa  fa-stack-1x fa-inverse">知</i>
-                  </span>
-                </a>
-              </li>
-                  <li>
-                <a target="_blank" href="https://weibo.com/ityouknow">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
