--- a/_includes/sidebar-popular-repo.html
+++ b/_includes/sidebar-popular-repo.html
@@ -1,7 +1,7 @@
 <div class="card text-center">
     <ul class="list-inline" style="margin-left: 0;">
         <li>
-            <a target="_blank" href="https://github.com/nangongyibin7219">
+            <a target="_blank" href="https://github.com/nangongyibin">
                 <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
