--- a/_includes/wok.html
+++ b/_includes/wok.html
@@ -1,3 +1,3 @@
 <div class="wok">
-  <image src="http://www.nangongyibin.com/assets/images/1.png"/>
+  <image src="http://www.nangongyibin.com/assets/images/wok/wok.png"/>
 </div>
