--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,7 +13,7 @@
     <p><strong>Personal</strong></p>
     <ul>
       <li>Email：<a href="mailto:{{ site.email }}" target="_top">{{ site.email }}</a></li>
-      <li>我的微信：<strong>LTZ94721990</strong>（备注：博客）</li>
+      <li>我的微信：<strong>niBiYgonnGnaN</strong>（备注：博客）</li>
     </ul>
     <h2>
       History
